--- a/render.yaml
+++ b/render.yaml
@@ -11,12 +11,13 @@ services:
         generateValue: true
       - key: DATABASE_URL
         fromDatabase:
-          name: donation-db
+          name: donation-postgres-db
           property: connectionString
       - key: PYTHON_VERSION
         value: 3.11.0
 
 databases:
-  - name: donation-db
-    databaseName: donation
-    plan: free 
+  - name: donation-postgres-db
+    databaseName: donation_db
+    plan: free
+    ipAllowList: [] 
